# wgpu-slang-hello-triangle

./: .gitignore  Cargo.toml  build.rs
shaders/: shader.slang
src/: main.rs
