[package]
name = "hello-wgpu-slang"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", default-features = false }
bytemuck = { version = "1.22.0", default-features = false, features = ["derive"] }
pollster = { version = "0.4.0", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt", "tracing-log"] }
wgpu = { version = "24.0.3", default-features = false, features = ["dx12", "metal", "spirv"] }
winit = { version = "0.30.9", default-features = false, features = ["rwh_06", "wayland"] }
